--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL = "mongodb+srv://shabashvilinika:shabashvilinika@cluster0.pxvhxai.mongodb.net/Cluster0?retryWrites=true&w=majority"
+DATABASE_URL = ""
 
 NEXTAUTH_SECRET = 'NEXTAUTH_SECRET'
 
