--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-spinners": "^0.13.8",
+    "swiper": "^11.0.5",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
